# PerpExchange

./: .gitignore  Perp.txt  README.md  extra.txt  start.txt
.zuse/: settings.toml
Architecture/: architecture.md
PerpExng/: package.json
PerpExng/apps/test/: index.test.ts  package.json
apps/LiquidationPoller/: README.md  index.ts  package.json
apps/backend/: index.ts  loopback.ts  middleware.ts  package.json
apps/engine/: Cargo.toml  index.ts  package.json
apps/engine/snapshots/: latest.json
apps/engine/src/: main.rs  orderbook.rs  snapshot.rs  state.rs  types.rs
apps/frontend/: package.json
apps/funding-ticker/: README.md  index.ts  package.json
apps/poller/: index.ts  package.json
apps/test/: index.test.ts  package.json
apps/ws/: index.ts  package.json
backend/: index.ts
